# arlo

./: Makefile  package.json  pyproject.toml
fixtures/: generate_election.py
scripts/: manifest-for-cvr.py  run-ty.sh
server/: database.py  models.py
server/api/: batches.py  discrepancies.py  reports.py  shared.py
server/audit_math/: minerva.py  sampler.py  suite.py
server/auth/: auth_helpers.py
server/tests/: helpers.py  test_auth.py
server/tests/api/: test_contests.py  test_support.py
